# babypi

./: .gitignore  Cargo.toml  README.md
docs/: babypi.html  index.html
examples/: config.rs  h264.rs  monitor.rs  pulseaudio.rs  sandbox.rs
src/: audio_monitor.rs  config.rs  ffmpeg.rs  lib.rs  live_stream.rs  process_control.rs  rpicam.rs  serde_stuff.rs  server.rs
src/config/: cli.rs  toml.rs
src/ffmpeg/: audio.rs
src/serde_stuff/: float_precision_two.rs
src/server/: middleware.rs  websocket.rs
src/server/middleware/: auth.rs  headers.rs
src/server/websocket/: telemetry.rs
src/telemetry/: events.rs
